Fixed radio button input align issue

--- a/src/styles/CustomerInformation.css
+++ b/src/styles/CustomerInformation.css
@@ -16,8 +16,9 @@
 
 /* Subscribe to our newsletter */
 #formGridCheckbox{
-margin-top: -1.5em;
+margin-top: -.5em;
 margin-bottom: 1em;
+margin-left: 0.2em;
 
 /* position: absolute;
 height: 21px;
@@ -29,9 +30,11 @@ top: 171px; */
 }
 
 .subscribe{
-margin-bottom: 2em;
+  position: absolute;
+  
+margin-bottom: 1em;
 /* Sub Filter */
-
+ padding-right: 1em;
 font-family: Montserrat;
 font-style: normal;
 font-weight: normal;
@@ -45,6 +48,11 @@ line-height: 21px;
 color: #2C1C59;
 }
 
+.subscribe-radio{
+  top: -.15em;
+  width: 2em;
+ left: .5em;
+}
 
 
 .customer-info-title {
@@ -205,7 +213,9 @@ color: #2C1C59;
 
 /* CONTINUE TO SHIPPING METHOD */
 .cont-shipping-method {
-  margin-left: 10.85em;
+  margin-left: 8em;
+  width: 75%;
+  /* margin-left: 10.85em; */
   margin-bottom: 1em;
   float: right;
 
